# sql-grain

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  examples.yml
examples/ml-1m/: README.md  schema.sql  train.py
examples/ml-small/: Makefile  build_database.py  model.py  train.py
src/sqlgrain/: __init__.py  data_source.py  records.py  util.py
tests/: conftest.py  test_data_source.py  test_records.py
